# meshbool

./: .gitignore  ALGORITHM_IMPLEMENTATION_PLAN.md  COMPARISON_RESULTS.md  Cargo.toml  DAY_SUMMARY.md  ELIMINATE_UNIMPLEMENTED_PANICS.md  FIX_DEPENDENCIES.md  GEMINI.md  IMPLEMENTATION_HITLIST.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MESHGL_ANALYSIS.md  MESH_COMPARISON_FRAMEWORK.md  PROGRESS_SUMMARY.md  README_EXAMPLES.md  REFACTORING_PLAN.md  SAFE_REFACTORING_TODO.md  VERIFICATION_SUMMARY.md  non_idiomatic_rust_todo.md  refactoring_todo.md  todo.md
.garbage/bevy_manifold_wip/: Cargo.toml  PLAN.md  README.md
.garbage/bevy_manifold_wip/crates/bevy_mesh_boolean/: README.md
.garbage/bevy_manifold_wip/crates/bevy_mesh_boolean/examples/: boolean_op_demo.rs  conversion_debug.rs  headless_debug.rs  simple_debug.rs
.garbage/bevy_manifold_wip/crates/bevy_mesh_boolean/src/: lib.rs
.garbage/bevy_manifold_wip/crates/bevy_step_loader/: Cargo.toml  TODO.md
.garbage/bevy_manifold_wip/crates/bevy_step_loader/examples/: debug_step_mesh.rs
.garbage/bevy_manifold_wip/crates/bevy_step_loader/src/: lib.rs
.garbage/bevy_manifold_wip/examples/: main.rs  simple_step_display.rs  step_boolean_demo.rs  step_subtract_demo.rs  step_to_step_subtract.rs  test_step_boolean.rs
.garbage/bevy_manifold_wip/examples/assets/real_parts/: 22mm_dovetail_block.step  63061.step  63153.step  69003.step  75335.step  77219.step  FC_001_SKELETONIZED.step  Headstage.step  LN_032-chamfered.step  Spiral_Cam_one_minute_without_knurl.step  TITAN-10M.step  wide_side_plate_4p.step
.garbage/bevy_manifold_wip/old/src/: main.rs
.garbage/bevy_manifold_wip/real_parts/: 30072-B.step  62426.step  64442.step  65840.step  66198.step  73633_centered.step  75381_579.step  76794.step  77215.step  78118.step  78190_centered.step  Barrel_Clamp_6P.step  LN_032.step  brian.step  collar.step  jeep-chassis-2M.step  multi-material-assembly.step  rear_left_upright_centered.step  tapped_sliding_lock.step  tension_folded_bracket.step  terryberry_caliper.step  terryberry_demo_bracket.step  x_end_idler.step  x_end_idler_v9.step
bevy_manifold_wip/: Cargo.toml  IMPLEMENTATION_SUMMARY.md
bevy_manifold_wip/.cargo/: config.toml
bevy_manifold_wip/crates/bevy_mesh_boolean/examples/: step_boolean_demo.rs
bevy_manifold_wip/crates/bevy_step_loader/: Cargo.toml
bevy_manifold_wip/crates/bevy_step_loader/src/: lib.rs
bevy_manifold_wip/examples/: mesh_conversion_test.rs
bevy_manifold_wip/examples/assets/real_parts/: 64120.step  Cam_6.step  Rearsight_base.step  rear_sight_aperture_holder.step  waffle_plates - P-BP-A001_3D.step
bevy_manifold_wip/real_parts/: 68799.step  73633.step  77924.step  FinalHotendDesign.step  TITAN-509LM.stp  Transverse_slide.step  mats_slow_load.stp  rgb.step
crates/: Cargo.toml  README.md
crates/assets/: multifeature.step
crates/examples/: debug_step_mesh.rs  load_step_file.rs
crates/src/: lib.rs
examples/: actual_step_demo.rs  bevy_final.rs  bevy_integration.rs  bevy_interactive_demo.rs  check_available_methods.rs  check_manifold_methods.rs  debug_cross_section.rs  final_integration_guide.rs  functionality_test.rs  manifold_info.rs  manifold_methods.rs  ops_demo.rs  real_step_integration.rs  realistic_step_demo.rs  slice_test.rs  step_file_integration.rs  step_integration_demo.rs  step_integration_guide.rs
manifold-rs/: .gitmodules  Cargo.toml  README.md  build.rs
manifold-rs/.github/workflows/: rust.yml
manifold-rs/examples/: bevy.rs  simple.rs  write_ply.rs  write_stl.rs
manifold-rs/src/: lib.rs  manifold_rs.cpp  manifold_rs.h  output.rs
manifold-testing/: Cargo.toml
manifold-testing/.garbage/: FINAL_IMPLEMENTATION_SUMMARY.md  FUNCTIONALITY_SUMMARY.rs  IMPLEMENTATION_SUMMARY.md  README.md  run_step_demo.sh  test_step.sh
manifold-testing/assets/: 62456.step  63004.step  63729.step  65208.step  68799_centered.step  74096.step  74850.step  75447.step  78190.step  EBAmk2_001 - 001_base.step  PI-0080803-C.step  Titan403.step  combination_flange.step  demo_file.step  qped_lil_boxz.step  qped_wing_nut.step  rear_left_upright.step  tension_d_bracket.step
manifold-testing/crates/bevy_mesh_boolean/: Cargo.toml
manifold-testing/crates/bevy_mesh_boolean/examples/: boolean_op_demo.rs  clean_demo.rs  direct_step_demo.rs  simple_working_demo.rs  step_boolean_demo.rs
manifold-testing/crates/bevy_mesh_boolean/src/: lib.rs
manifold-testing/crates/bevy_step_loader/: Cargo.toml
manifold-testing/crates/bevy_step_loader/examples/: headless_step_test.rs  load_step_file.rs
manifold-testing/crates/bevy_step_loader/src/: lib.rs
manifold-testing/examples/: Cargo.toml  step_boolean_demo.rs
manifold-testing/old/: Cargo.toml
manifold-testing/real_parts/: real_parts.json  watchy.sh
manifold-testing/src/: lib.rs
src/: boolean3.rs  boolean_result.rs  collider.rs  common.rs  common.rs.backup  constructors.rs  cross_section_helper.rs  cross_section_utils.rs  disjoint_sets.rs  edge_op.rs  face_op.rs  impl.rs  lib.rs  lib.rs.backup  mesh_compare.rs  mesh_compare_tests.rs  mesh_fixes.rs  meshboolimpl.rs  parallel.rs  polygon.rs  polygon_safe.rs  properties.rs  shared.rs  sort.rs  tree2d.rs  utils.rs  vec.rs
src/bevy_step_loader/: lib.rs
tests/: basic_tests.rs  boolean_complex.rs  boolean_ops.rs  comparison_tests.rs  comparison_verification.rs  comprehensive_comparison.rs  core.rs  cross_section.rs  cross_section_validation.rs  hull.rs  integration_tests.rs  mesh_compare.rs  mesh_compare_integration.rs  mesh_comparison.rs  mesh_comparison_basic.rs  polygons.rs  properties.rs  sdf.rs  simple_comparison.rs  smooth.rs
