[package]
name = "meshbool"
version = "0.0.0"
edition = "2024"

[features]

[dependencies]
bevy = "0.17.2"
nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
bevy_step_loader = { path = "crates" }
bevy_mesh = "0.17.2"

[dev-dependencies]
manifold-rs = "0.6.2"
approx = "0.5.1"
