[package]
name = "meshbool"
version = "0.0.0"
edition = "2024"

[features]
bevy = ["dep:bevy_mesh", "dep:bevy_asset"]

[dependencies]
nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
bevy_mesh = { version = "0.17.2", optional = true }
bevy_asset = { version = "0.17.2", optional = true }


[dev-dependencies]
manifold-rs = "0.6.2"
approx = "0.5.1"
bevy_step_loader = { git = "https://github.com/alphastrata/bevy_step_loader" }
bevy_mesh = "0.17.2"
bevy = "0.17.2"
