[workspace]
resolver = "2"
members = ["crates/bevy_mesh_boolean", "crates/bevy_step_loader", "examples"]

# We also want all our deps controlled (versions etc) by the workspace toml
[workspace.dependencies]
bevy = "0.17.2"
bevy_editor_cam = "0.5.0"
manifold-rs = "0.6.2"
naga = "26.0.0"
bevy_mod_picking = { version = "0.20.0", default-features = false, features = [
    "backend_raycast",
] }
log = "0.4"
env_logger = "0.11"

# Using a version of step that might be more compatible
step = { git = "https://github.com/alphastrata/foxtrot.git", branch = "ideas", package = "step", features = [
    "rayon",
] }
# triangulate = { git = "https://github.com/alphastrata/foxtrot.git", branch = "ideas", package = "triangulate", features = [
#     "rayon",
# ] }

# Pin termcolor to a specific version to avoid conflicts
termcolor = "1.4.1"
