[package]
name = "bevy_step_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
step = { git = "https://github.com/alphastrata/foxtrot.git", branch = "ideas", features = ["rayon"] }
bevy_mesh = "0.17.2"
triangulate = { git = "https://github.com/alphastrata/foxtrot.git", branch = "ideas", features = ["rayon"] }
wgpu-types = "26.0.0"
futures-lite = "2.6.1"
anyhow = "1.0.100"

[dependencies.opencascade]
version = "0.2.0"
optional = true
