[package]
name = "composite_example"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "composite_example"
path = "main.rs"

[[bin]]
name = "step_boolean_demo"
path = "step_boolean_demo.rs"

[[bin]]
name = "simple_step_display"
path = "simple_step_display.rs"

[[bin]]
name = "step_subtract_demo"
path = "step_subtract_demo.rs"

[[bin]]
name = "test_step_boolean"
path = "test_step_boolean.rs"

[[bin]]
name = "mesh_conversion_test"
path = "mesh_conversion_test.rs"

[[bin]]
name = "step_to_step_subtract"
path = "step_to_step_subtract.rs"

[dependencies]
bevy = { workspace = true }
bevy_editor_cam = { workspace = true }
bevy_mod_picking = { workspace = true }
bevy_mesh_boolean = { path = "../crates/bevy_mesh_boolean" }
bevy_step_loader = { path = "../crates/bevy_step_loader" }
clap = { version = "4.0", features = ["derive"] }
