[package]
name = "bevy_mesh_boolean"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
manifold-rs = { workspace = true }

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
bevy_step_loader = { path = "../bevy_step_loader" }

[[example]]
name = "boolean_op_demo"
path = "examples/boolean_op_demo.rs"

[[example]]
name = "simple_debug"
path = "examples/simple_debug.rs"

[[example]]
name = "conversion_debug"
path = "examples/conversion_debug.rs"
