[package]
name = "bevy_step_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
step = { workspace = true }
triangulate = { workspace = true }
anyhow = "1.0"

[dependencies.opencascade]
version = "0.2.0"
optional = true

[features]
default = ["opencascade"]
opencascade = ["dep:opencascade"]
