[package]
name = "bevy_step_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_mesh = { workspace = true }
bevy_render = { workspace = true }
step = { workspace = true }
triangulate = { workspace = true }
anyhow = "1.0"
futures = "0.3"

[dependencies.opencascade]
version = "0.2.0"
optional = true

[features]
default = ["fallback"]
fallback = []  # Use the triangulate implementation by default
opencascade = ["dep:opencascade"]
